# data-processor

./: .gitignore  .gitlab-ci.yml  README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml
app/: CMakeLists.txt  build.gradle
app/src/_testnet/res/values/: ic_launcher_background.xml  strings.xml
app/src/androidTest/java/com/acurast/attested/executor/: V8ExecutorTest.kt
app/src/androidTest/java/com/acurast/attested/executor/crypto/signer/: GenericEcdsaTest.kt  P256Test.kt
app/src/androidTest/java/com/acurast/attested/executor/native/: CryptoTest.kt  SweetBICryptoTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: sweet_b_signer.c  sweet_b_signer.h
app/src/main/java/com/acurast/attested/executor/: App.kt  Constants.kt  HeartbeatBroadcastReceiver.kt  JobFetcherBroadcastReceiver.kt  V8ExecutorBroadcastReceiver.kt
app/src/main/java/com/acurast/attested/executor/crypto/: Attestation.kt  CryptoLegacy.kt  ICrypto.kt
app/src/main/java/com/acurast/attested/executor/crypto/curves/: Curve.kt  Ecdsa.kt  GenericEcdsa.kt  P256.kt  RecoverableEcdsa.kt
app/src/main/java/com/acurast/attested/executor/native/: SweetBSigner.kt
app/src/main/java/com/acurast/attested/executor/protocol/: IProtocol.kt
app/src/main/java/com/acurast/attested/executor/protocol/acurast/: Acurast.kt  AcurastRPC.kt  Utils.kt
app/src/main/java/com/acurast/attested/executor/protocol/ethereum/: Ethereum.kt  Utils.kt
app/src/main/java/com/acurast/attested/executor/protocol/tezos/: Micheline.kt  Operation.kt  Tezos.kt  TezosRPC.kt  Utils.kt
app/src/main/java/com/acurast/attested/executor/services/: HeartbeatService.kt  JobFetcherService.kt  V8ExecutorService.kt
app/src/main/java/com/acurast/attested/executor/ui/: AcurastApp.kt  AcurastAppState.kt  MainActivity.kt
app/src/main/java/com/acurast/attested/executor/ui/addresses/: Addresses.kt
app/src/main/java/com/acurast/attested/executor/ui/common/: Button.kt
app/src/main/java/com/acurast/attested/executor/ui/home/: Overview.kt
app/src/main/java/com/acurast/attested/executor/ui/settings/: Settings.kt
app/src/main/java/com/acurast/attested/executor/ui/theme/: Color.kt  Shape.kt  Theme.kt  Typography.kt
app/src/main/java/com/acurast/attested/executor/utils/: Device.kt  Encoding.kt  IPFS.kt  Networking.kt  Notification.kt  Once.kt  Package.kt  QR.kt  Scheduler.kt  Tezos.kt
app/src/main/java/com/acurast/attested/executor/v8/: V8Executor.kt  V8Utils.kt
app/src/main/java/com/acurast/attested/executor/v8/prelude/: Ethereum.kt  Signers.kt  Substrate.kt  Tezos.kt
app/src/main/res/drawable/: ic_baseline_storefront_24.xml  ic_baseline_system_update_24.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/mainnet/res/values/: strings.xml
app/src/test/java/android/util/: Log.kt
app/src/test/java/com/acurast/attested/executor/crypto/: Secp256k1Test.kt  Secp256r1Test.kt
app/src/test/java/com/acurast/attested/executor/protocol/ethereum/: UtilsTest.kt
app/src/test/java/com/acurast/attested/executor/protocol/tezos/: MichelineTest.kt  TezosTest.kt
app/src/test/java/com/acurast/attested/executor/utils/: AcurastTest.kt  EncodingTest.kt  IPFSTest.kt  OnceTest.kt
gradle/wrapper/: gradle-wrapper.properties
